[gd_scene load_steps=6 format=3 uid="uid://cpfuow0xwosx2"]

[ext_resource type="Script" path="res://Components/Gate/Gate.gd" id="1_mgbci"]
[ext_resource type="PackedScene" uid="uid://dgebcrstkcbmj" path="res://Components/Gate/Connection.tscn" id="2_fgggy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tfs0u"]
bg_color = Color(0.0434614, 0.0480908, 0.0543672, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5vfmn"]
bg_color = Color(0.243758, 0.594333, 0.609953, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a05hd"]
bg_color = Color(0.243758, 0.594333, 0.609953, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Gate" type="Panel"]
custom_minimum_size = Vector2(200, 100)
offset_left = -25.0
offset_top = -25.0
offset_right = 175.0
offset_bottom = 75.0
theme_override_styles/panel = SubResource("StyleBoxFlat_tfs0u")
script = ExtResource("1_mgbci")

[node name="Label" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Name" type="Label" parent="Label"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Gate"

[node name="BottomMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -15.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 25
theme_override_constants/margin_right = 15

[node name="BottomContainer" type="HBoxContainer" parent="BottomMargin"]
layout_mode = 2
theme_override_constants/separation = 51

[node name="TopMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 15.0
grow_horizontal = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 1

[node name="TopContainer" type="HBoxContainer" parent="TopMargin"]
layout_mode = 2
theme_override_constants/separation = 51

[node name="Connection" parent="TopMargin/TopContainer" instance=ExtResource("2_fgggy")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5vfmn")

[node name="Connection2" parent="TopMargin/TopContainer" instance=ExtResource("2_fgggy")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_a05hd")

[node name="RightMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -15.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_top = 25
theme_override_constants/margin_bottom = 15

[node name="RightContainer" type="VBoxContainer" parent="RightMargin"]
layout_mode = 2
theme_override_constants/separation = 51

[node name="LeftMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 15.0
grow_vertical = 2
theme_override_constants/margin_top = 25
theme_override_constants/margin_bottom = 15

[node name="LeftContainer" type="VBoxContainer" parent="LeftMargin"]
layout_mode = 2
theme_override_constants/separation = 51
